<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altas" />

    <EditText
        android:id="@+id/cajaId_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Id_Alumno" />

    <EditText
        android:id="@+id/cajaNombre_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/cajaPrimerAp_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/apPaterno" />

    <EditText
        android:id="@+id/cajaSegundoAp_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/apMaterno" />

    <EditText
        android:id="@+id/cajaEdad_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edad" />

    <EditText
        android:id="@+id/cajaSemestre_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/semestre" />

    <EditText
        android:id="@+id/cajacarrera_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/carrera" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Onclick"
        android:text="@string/txt_brn_altas" />

    <Button
        android:id="@+id/limpiar_consultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limpiar"
        android:text="@string/limpiar" />
</LinearLayout>