<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bajas" />

    <EditText
        android:id="@+id/cajaid_bajas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Id_Alumno" />

    <Button
        android:id="@+id/btn_Eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="eliminarAlumno"
        android:text="@string/txt_brn_bajas" />
</LinearLayout>