<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="255dp"
        android:layout_height="205dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/caja_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_iniciar" />

    <EditText
        android:id="@+id/caja_usuario"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/caja_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="24dp"
        android:onClick="iniciar"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_contraseña" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="99dp"
        android:onClick="abrirRegistro"
        android:text="@string/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/caja_contraseña"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_usuario" />
</androidx.constraintlayout.widget.ConstraintLayout>